@@ -1,0 +1,2 @@
+$roda_app.opts[:loaded] << :a_c
+$roda_app.hash_branch('/a', 'c'){|r| 'a-c'}
