@@ -29,6 +29,7 @@
 
   <ul>
     <li>Routing: <ul>
+      <li><a href="rdoc/classes/Roda/RodaPlugins/AutoloadHashBranches.html">autoload_hash_branches</a>: Allows autoloading file for a hash branch when there is a request for that branch.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/AllVerbs.html">all_verbs</a>: Adds request routing methods for all http verbs.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/BacktrackingArray.html">backtracking_array</a>: Allows array matchers to backtrack if later matchers do not match.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/ClassLevelRouting.html">class_level_routing</a>: Adds class level routing methods, for a DSL similar to <a href="https://github.com/sinatra/sinatra">sinatra</a>.</li>
